--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CategoryFragment"/>
+    tools:context=".CategoryFragment">
+
+    <TextView
+        android:id="@+id/homePageTitleText"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/main_theme_color"
+        android:fontFamily="sans-serif-black"
+        android:paddingTop="10dp"
+        android:text="@string/homepage_title"
+        android:textAlignment="center"
+        android:textColor="#C5CFF3"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</FrameLayout>
