--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -4,23 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductFragment">
-
-    <TextView
-        android:id="@+id/homePageTitleText"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/main_theme_color"
-        android:fontFamily="sans-serif-black"
-        android:paddingTop="10dp"
-        android:text="@string/homepage_title"
-        android:textAlignment="center"
-        android:textColor="#C5CFF3"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorLink="#FFFFFF"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</FrameLayout>
+    tools:context=".ProductFragment"/>
