--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -121,7 +121,7 @@
         android:id="@+id/enterProductDescText"
         android:layout_width="355dp"
         android:layout_height="119dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="@string/enter_product_desc_ph"
@@ -132,7 +132,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addProductTitleText" />
+        app:layout_constraintTop_toBottomOf="@+id/productDescTextView" />
 
     <EditText
         android:id="@+id/enterStockText"
@@ -184,24 +184,24 @@
         app:layout_constraintTop_toBottomOf="@+id/enterStockText" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/shipServiceRequiredCb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="484dp"
+        android:layout_marginTop="12dp"
         android:text="@string/ship_option_cb_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addProductTitleText" />
+        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="154dp"
         android:layout_height="51dp"
-        android:layout_marginTop="556dp"
+        android:layout_marginTop="16dp"
         android:text="@string/add_product_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addProductTitleText" />
+        app:layout_constraintTop_toBottomOf="@+id/shipServiceRequiredCb" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
