--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -205,3 +211,5 @@
         app:layout_constraintTop_toBottomOf="@+id/shipServiceRequiredCb" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    
+</ScrollView>
